--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, height=device-height, viewport-fit=auto"/>
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	
-	<title>Template</title>
+	<title>Office Simulator</title>
 
 	<script src="main.js"></script>
 	<script src= "NewgroundsIO.js"></script>
