computer scene setup

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
 
 	<script src="main.js"></script>
 	<script src= "NewgroundsIO.js"></script>
+	<script type="importmap">
+		{
+		  "imports": {
+			"three": "https://unpkg.com/three@<0.159.0>/build/three.module.js",
+			"three/addons/": "https://unpkg.com/three@<0.159.0>/examples/jsm/"
+		  }
+		}
+	  </script>
 
 </head>
 
